updated index.html (modal popup windows)

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
 
     <div class="row" id="buttons_row">
-      <div class="col-6">
+      <div class="col-6" id="add_button">
         <button
-          class="btn btn-dark"
+          class="btn btn-dark" 
           data-bs-toggle="modal"
           data-bs-target="#add_btn_modal"
         >
@@ -56,7 +56,7 @@
               <div class="modal-body">
                 <form>
                   <div class="mb-3">
-                    <label for="input_task_name" class="form-label"
+                    <label for="input_task_name" class="form-label text-indent-initial"
                       >Task name:</label
                     >
                     <input
@@ -70,7 +70,7 @@
                     </div>
                   </div>
                   <div class="mb-3">
-                    <label for="input_task_date" class="form-label"
+                    <label for="input_task_date" class="form-label text-indent-initial"
                       >Date:</label
                     >
                     <input
@@ -84,7 +84,7 @@
                     </div>
                   </div>
                   <div class="mb-3">
-                    <label for="input_task_assignment" class="form-label"
+                    <label for="input_task_assignment" class="form-label text-indent-initial"
                       >Assigned to:</label
                     >
                     <input
@@ -98,7 +98,7 @@
                     </div>
                   </div>
                   <div class="mb-3">
-                    <label for="input_task_description" class="form-label"
+                    <label for="input_task_description" class="form-label text-indent-initial"
                       >Task Description:</label
                     >
                     <textarea
@@ -312,4 +312,4 @@
       crossorigin="anonymous"
     ></script>
   </body>
-</html>
+</html
