--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
     <link rel="stylesheet" href="./public/style.css" />
   </head>
   <body>
@@ -30,55 +26,252 @@
     </div>
 
     <div class="row" id="buttons_row">
-      <div class="col-6">
-        <button class="btn btn-dark">Add task</button>
-      </div>
-      <div class="col-6" id="edit_remove_btns">
-        <button type="button" class="btn btn-warning">Edit</button>
-        <!-- Button trigger modal -->
+      <div class="col-6" id="add_button">
         <button
-          type="button"
-          class="btn btn-danger"
-          data-toggle="modal"
-          data-target="#exampleModal"
+          class="btn btn-dark" 
+          data-bs-toggle="modal"
+          data-bs-target="#add_btn_modal"
         >
-          Remove
+          Add task
         </button>
-
-        <!-- Modal -->
+        <!-- Modal (add popup window)-->
         <div
           class="modal fade"
-          id="exampleModal"
+          id="add_btn_modal"
           tabindex="-1"
-          role="dialog"
-          aria-labelledby="exampleModalLabel"
+          aria-labelledby="add_modal_label"
           aria-hidden="true"
         >
-          <div class="modal-dialog" role="document">
+          <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Remove</h5>
+                <h5 class="modal-title" id="add_modal_label">Add</h5>
                 <button
                   type="button"
-                  class="close"
-                  data-dismiss="modal"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
                   aria-label="Close"
-                >
-                  <span aria-hidden="true">&times;</span>
-                </button>
+                ></button>
               </div>
-              <div class="modal-body">...</div>
+              <div class="modal-body">
+                <form>
+                  <div class="mb-3">
+                    <label for="input_task_name" class="form-label text-indent-initial"
+                      >Task name:</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="input_task_name"
+                      aria-describedby="task_name_help"
+                    />
+                    <div id="task_name_help" class="form-text">
+                      Please enter task name
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="input_task_date" class="form-label text-indent-initial"
+                      >Date:</label
+                    >
+                    <input
+                      type="date"
+                      class="form-control"
+                      id="input_task_date"
+                      aria-describedby="task_date_help"
+                    />
+                    <div id="task_date_help" class="form-text">
+                      Please enter task date
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="input_task_assignment" class="form-label text-indent-initial"
+                      >Assigned to:</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="input_task_assignment"
+                      aria-describedby="task_assignment_help"
+                    />
+                    <div id="task_assignment_help" class="form-text">
+                      Task assigned to:
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="input_task_description" class="form-label text-indent-initial"
+                      >Task Description:</label
+                    >
+                    <textarea
+                      rows="10"
+                      cols="20"
+                      type="text"
+                      class="form-control"
+                      id="input_task_description"
+                      aria-describedby="task_description_help"
+                    ></textarea>
+                    <div id="task_description_help" class="form-text">
+                      Please enter task description
+                    </div>
+                  </div>
+                </form>
+              </div>
               <div class="modal-footer">
                 <button
                   type="button"
                   class="btn btn-secondary"
-                  data-dismiss="modal"
+                  data-bs-dismiss="modal"
                 >
-                  Close
+                  Cancel
                 </button>
-                <button type="button" class="btn btn-primary">
-                  Save changes
+                <button type="button" class="btn btn-primary">Add</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-6" id="edit_remove_btns">
+        <button
+          type="button"
+          class="btn btn-warning"
+          data-bs-toggle="modal"
+          data-bs-target="#edit_btn_modal"
+        >
+          Edit
+        </button>
+        <!-- Modal (edit popup window)-->
+        <div
+          class="modal fade"
+          id="edit_btn_modal"
+          tabindex="-1"
+          aria-labelledby="edit_modal_label"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="edit_modal_label">Edit</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="mb-3">
+                    <label for="input_task_name" class="form-label"
+                      >Task name:</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="input_task_name"
+                      aria-describedby="task_name_help"
+                    />
+                    <div id="task_name_help" class="form-text">
+                      Please update task name
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="input_task_date" class="form-label"
+                      >Date:</label
+                    >
+                    <input
+                      type="date"
+                      class="form-control"
+                      id="input_task_date"
+                      aria-describedby="task_date_help"
+                    />
+                    <div id="task_date_help" class="form-text">
+                      Please update task date
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="input_task_assignment" class="form-label"
+                      >Assigned to:</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="input_task_assignment"
+                      aria-describedby="task_assignment_help"
+                    />
+                    <div id="task_assignment_help" class="form-text">
+                      Task assigned to:
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="input_task_description" class="form-label"
+                      >Task Description:</label
+                    >
+                    <textarea
+                      rows="10"
+                      cols="20"
+                      type="text"
+                      class="form-control"
+                      id="input_task_description"
+                      aria-describedby="task_description_help"
+                    ></textarea>
+                    <div id="task_description_help" class="form-text">
+                      Please update task description
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Cancel
                 </button>
+                <button type="button" class="btn btn-warning">Edit</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <button
+          type="button"
+          class="btn btn-danger"
+          data-bs-toggle="modal"
+          data-bs-target="#remove_btn_modal"
+        >
+          Remove
+        </button>
+        <!-- Modal (remove popup window)-->
+        <div
+          class="modal fade"
+          id="remove_btn_modal"
+          tabindex="-1"
+          aria-labelledby="remove_modal_label"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="remove_modal_label">Remove</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <p>Move this task to the Recycle bin?</p>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Cancel
+                </button>
+                <button type="button" class="btn btn-danger">Remove</button>
               </div>
             </div>
           </div>
@@ -112,12 +305,11 @@
         </div>
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
   </body>
-</html>
+</html
