corrected nav bar and side bar per screens

--- a/index.html
+++ b/index.html
@@ -17,16 +17,11 @@
 <body>
 
 <!-- nav bar for home screen -->
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top navbar-"
-     style="height: 36px">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top navbar-">
     <a
-            href="#"
-            class="navbar-brand mb-0 h1">
-        <img
-                class="d-inline-block align-top"
-                src="https://media.istockphoto.com/vectors/check-vector-id871478670?k=20&m=871478670&s=612x612&w=0&h=qh3cQ0BOokeBWiJQp6fvjX-JpIIimTtAOkwe_Yt0y6k="
-                alt="picture of checkmark"
-                width="50" height="30"/>
+        href="#"
+        class="navbar-brand mb-0 h1">
+        <i class='bx bx-check-square' ></i>
         TODO
     </a>
     <button class="navbar-toggler"
@@ -45,12 +40,12 @@
         <ul class="navbar-nav">
             <!-- link for home -->
             <li class="nav-item active">
-                <a class="nav-link active" href="./Views/home.html">Home</a>
+                <a class="nav-link active" href="public/home.html">Home</a>
             </li>
 
             <!-- link for about -->
             <li class="nav-item active">
-                <a class="nav-link active" href="./Views/about.html">About</a>
+                <a class="nav-link active" href="public/about.html">About</a>
             </li>
 
             <!-- link for login  -->
