added about info and home

--- a/public/about.html
+++ b/public/about.html
@@ -102,15 +102,16 @@
         <h1>About Us</h1>
         <h2>Information about the team</h2>
         <section>
-            <p>The projects page will allow you to add projects and click associated tasks within said project.
-                You may view dates for starting and ending dates. You may add, edit, or delete projects on this
-                page </p>
+            <p>We are a team of software developer apprentices set on a mission to create a project management application.
+                We also have an interest in providing a diverse competitor to help you get your tasks done faster.
+            </p>
         </section>
         <h3>Motivation of project</h3>
         <section>
-            <p>The tasks page will allow you to add projects and click associated tasks within said project.
-                You may view dates for starting and ending dates. You may add, edit, or delete projects on this
-                page </p>
+            <p>We wanted to be able to provide consumers with a tool that empowers their team to manage any type of
+                project, workflow, or task tracking.Through our training and experiences we were able to produce a
+                product which allows users to create tasks, projects, and issues.
+            </p>
         </section>
 
     </container>
