--- a/public/home.html
+++ b/public/home.html
@@ -113,17 +113,8 @@
         </section>
 
         <section>
-            <p>The calendar allow you to view the current month with populated tasks. You will have the ability to click
-                on
-                tasks within
-                the calendar block and manipulate the data.</p>
-
-        </section>
-
-        <section>
             <p>The recycle bin page show you all the deleted items and give you the ability to restore the deleted
-                tasks.
-                Also, you will be able to permanently delete the items.</p>
+                tasks. Also, you will be able to permanently delete the items.</p>
         </section>
     </container>
 </div>
